[package]
name = "rust-websocket-echo-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tokio = { version = "1.42.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
futures-util = "0.3"
http = "1.2.0"
tracing = "0.1.41"
