[package]
name = "rust-websocket-server"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/LukaJioshvili20/rust-websocket-server"
keywords = ["rust", "websocket", "server", "ws"]
categories = ["network-programming", "server"]
readme = "README.md"

[dependencies]
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tokio = { version = "1.42.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
futures-util = "0.3"
http = "1.2.0"
tracing = "0.1.41"
uuid = { version = "1.9.1", features = ["v4"] }
